--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "dev": "tsx watch ./src/index.ts",
     "build": "tsc"
   },
+  "bin": {
+    "task-cli": "./dist/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/commander": "^2.12.5",
     "@types/node": "^22.10.7",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "commander": "^13.0.0"
   }
 }
